Adapted to work with latest ionic CLI

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,11 +1,18 @@
 {
   "name": "San Lorenzo",
-  "app_id": "044025bd",
+  "integrations": {},
   "browsers": [
     {
       "platform": "android",
       "browser": "crosswalk",
       "version": "12.41.296.5"
     }
+  ],
+  "pro_id": "044025bd",
+  "watchPatterns": [
+    "scss/**/*",
+    "www/**/*",
+    "!www/lib/**/*",
+    "!www/**/*.map"
   ]
 }
