--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "Guia de fiestas San Lorenzo 2016 en Huesca",
   "dependencies": {
     "gulp": "^3.5.6",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.3",
     "ionic-native-transitions": "^1.0.0-rc11"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
+    "@ionic/v1-toolkit": "^1.0.0",
+    "bower": "^1.8.4",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.1",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.8.2"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
