Updated to latest ionic 1 release

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,8 @@
 {
   "name": "San Lorenzo",
-  "integrations": {},
+  "integrations": {
+    "cordova": {}
+  },
   "browsers": [
     {
       "platform": "android",
