--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "com.telerik.plugins.nativepagetransitions": "git+https://github.com/Telerik-Verified-Plugins/NativePageTransitions.git#0.6.5",
     "cordova-android": "7.0.0",
     "cordova-android-support-gradle-release": "^1.4.4",
-    "cordova-plugin-app-event": "^1.2.1",
-    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-badge": "^0.8.7",
+    "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-inappbrowser": "^1.4.0",
+    "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-x-socialsharing": "^5.4.1",
     "cordova-plugin-x-toast": "git+https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git",
-    "de.appplant.cordova.plugin.local-notification": "git+https://github.com/ismaro3/cordova-plugin-local-notifications.git",
     "es6-promise-plugin": "^4.2.2",
     "gulp": "^3.5.6",
     "ionic-native-transitions": "^1.0.0-rc11"
@@ -45,7 +47,6 @@
   ],
   "cordova": {
     "plugins": {
-      "de.appplant.cordova.plugin.local-notification": {},
       "cordova-plugin-x-toast": {},
       "com.telerik.plugins.nativepagetransitions": {},
       "cordova-plugin-inappbrowser": {},
@@ -54,7 +55,10 @@
         "ANDROID_SUPPORT_VERSION": "27.+"
       },
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-statusbar": {}
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-local-notification": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-splashscreen": {}
     },
     "platforms": [
       "android"
